# python-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md
container/: pyproject.toml
container/tests/: test_main.py
