[tool.poetry]
name = "templatepython"
version = "0.1.0"
description = ""
authors = ["J. S. de Boer <joskodeboer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
polars = "^0.19.15"
seaborn-polars = "^0.0.2.6"
fastapi = "^0.104.1"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
click = "^8.1.7"
pytest = "^7.4.3"
jupyterlab = "^4.0.9"
seaborn = "^0.13.0"
pyarrow = "^14.0.1"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
